2005-01-29  Thomas Koenig  <Thomas.Koenig@online.de>

PR libfortran/19595
	* io/transfer.c (data_transfer_init): eor requires advance="NO".
testsuite/
	* gfortran.dg/eor_1.f90:  New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@94410 138bc75d-0d04-0410-961f-82ee72b054a4